src/objects/IPM_Project_Document_Section_Content__c.object
<CustomObject>
    <description>This is used in IPM to hold section contents</description>
    <fields>
        <fullName>BETCurrentStatus__c</fullName>
        <formula>IF(ISBLANK(IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.IPM_Parent_Project__c), 
CASE(IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.BETCurrentStatus__c, &apos;Unreleased&apos;, &apos;Red&apos;, &apos;First release&apos;, &apos;Amber&apos;,&apos;Final release&apos; ,&apos;Green&apos;,&apos;&apos;, &apos;Not Applicable&apos;, &apos;&apos; ), 
CASE(IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.IPM_Parent_Project__r.BETCurrentStatus__c, &apos;Unreleased&apos;, &apos;Red&apos;, &apos;First release&apos;, &apos;Amber&apos;,&apos;Final release&apos; ,&apos;Green&apos;,&apos;&apos;, &apos;Not Applicable&apos;, &apos;&apos; ))</formula>
        <label>BET Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentFieldAPIName__c</fullName>
        <label>Dependent Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assort_Channel_Name__c</fullName>
        <description>for displaying channel name in assortment strategy</description>
        <label>IPM_Assort_Channel_Name</label>
        <picklist>
            <picklistValues>
                <fullName>Ahold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Watson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auchan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrefour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypermarkets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwarz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarkets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tesco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walmart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_AssortmentStrategy_From__c</fullName>
        <description>Used for specify assortment from date</description>
        <label>AssortmentStrategy From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_AssortmentStrategy_To__c</fullName>
        <inlineHelpText>Used for specify assortment TO date</inlineHelpText>
        <label>AssortmentStrategy To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_CU_Priority__c</fullName>
        <description>contains priority for assortment</description>
        <label>IPM Assortment CU Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_Cus__c</fullName>
        <description>contains assortment Cus value</description>
        <label>IPM Assortment Cus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_Strategy_Priority__c</fullName>
        <description>Used for specify assortment priority</description>
        <label>Assortment Strategy Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Assortment_strategy_Target__c</fullName>
        <description>Used for specify assortment strategy target</description>
        <label>Assortment Strategy Target</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_A_P__c</fullName>
        <description>contains financial profit</description>
        <label>IPM Assumption A&amp;P</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_CAPEX__c</fullName>
        <description>contains Capex from financials</description>
        <label>IPM Assumption CAPEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_Countries__c</fullName>
        <description>contains countries for assumption</description>
        <label>IPM Assumption Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_GM__c</fullName>
        <description>contains GM from financials</description>
        <label>IPM Assumption GM%</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_Market_Size__c</fullName>
        <description>contains market size from financial</description>
        <label>IPM Assumption Market Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_Pricing__c</fullName>
        <description>contains pricing from financial</description>
        <label>IPM Assumption Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_Restages__c</fullName>
        <description>contains restages from financial</description>
        <label>IPM Assumption Restages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_T_O_Cannibalization__c</fullName>
        <description>contains TO Cannibalization from financial</description>
        <label>IPM Assumption T/O Cannibalization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_Volume_Yr_2__c</fullName>
        <description>contains volume yr 2 from financial</description>
        <label>IPM Assumption Volume Yr 2+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_Volume__c</fullName>
        <description>contains volume  from financial</description>
        <label>IPM Assumption Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumption_Yr_1_Trade_Promotion__c</fullName>
        <description>contains year 1 trade promotion from financial</description>
        <label>IPM Assumption Yr 1 Trade Promotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Color_Score_Value_Achieved__c</fullName>
        <description>contains cmi color score value achieved</description>
        <label>IPM CMI Color Score Value Achieved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Color_Score_Value__c</fullName>
        <description>contains cmi color score</description>
        <label>IPM CMI Color Score Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Comments__c</fullName>
        <description>contains cmi comments</description>
        <label>IPM CMI Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Country__c</fullName>
        <description>contains cmi country</description>
        <label>IPM CMI Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Country_isNull__c</fullName>
        <description>This field will advice if IPM_CMI_Country__c is null or not</description>
        <formula>IF( ISBLANK( IPM_CMI_Country__c ) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice if IPM_CMI_Country__c is null or not</inlineHelpText>
        <label>IPM_CMI_Country_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Free_Text__c</fullName>
        <label>IPM CMI Free Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Gate_Test__c</fullName>
        <description>contains cmi test</description>
        <formula>TEXT(IPM_Gate_CMI__r.Test__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM CMI Gate Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Input__c</fullName>
        <description>contains cmi input</description>
        <label>IPM CMI Input</label>
        <picklist>
            <picklistValues>
                <fullName>Salience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relevance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expensiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Differentiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall liking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shelf visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shelf findability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shelf purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>package communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVM (Concept Viability Measure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Is_Free_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>enable user to create a new input</description>
        <label>IPM CMI Is Free Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Outcome_Color_Achieved__c</fullName>
        <description>contains cmi outcome color achieved</description>
        <label>IPM CMI Outcome Color Achieved</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Outcome_Color__c</fullName>
        <description>contains outcome color</description>
        <label>IPM CMI Outcome Color</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Color_Score_Achieved__c</fullName>
        <description>stores cmi overall color score</description>
        <label>IPM CMI Overall Color Score Achieved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Colour_Achieved__c</fullName>
        <description>contains overall color achieved in cmi</description>
        <label>IPM CMI Overall Colour Achieved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Colour_Coding_Method__c</fullName>
        <description>contains cmi color coding method</description>
        <label>IPM CMI Overall Colour Coding Method</label>
        <picklist>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Colour__c</fullName>
        <description>Stores the name of overall color</description>
        <label>IPM CMI Overall Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Comments__c</fullName>
        <description>contains overall comments in cmi</description>
        <label>IPM CMI Overall Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Score_Achieved__c</fullName>
        <description>contains overall score achieved in cmi</description>
        <label>IPM CMI Overall Score Achieved</label>
        <picklist>
            <controllingField>IPM_CMI_Input__c</controllingField>
            <picklistValues>
                <fullName>Failure (=&lt; 33%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky (34% - 69%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory (70% - 84%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding (&gt;= 85%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 30%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Score_Label__c</fullName>
        <description>cmi overall score label</description>
        <label>IPM CMI Overall Score Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Overall_Score__c</fullName>
        <description>contains cmi overall score</description>
        <label>IPM CMI Overall Score</label>
        <picklist>
            <controllingField>IPM_CMI_Input__c</controllingField>
            <picklistValues>
                <fullName>Failure (=&lt; 33%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky (34% - 69%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory (70% - 84%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding (&gt;= 85%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 30%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Result_Timing__c</fullName>
        <description>cmi result timings</description>
        <label>IPM CMI Result Timing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Result__c</fullName>
        <description>contains cmi result</description>
        <label>IPM CMI Result</label>
        <picklist>
            <controllingField>IPM_CMI_Input__c</controllingField>
            <picklistValues>
                <fullName>Failure (=&lt; 33%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky (34% - 69%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory (70% - 84%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding (&gt;= 85%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 30%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CMI_Results_Acheived__c</fullName>
        <description>contains cmi results achieved</description>
        <label>IPM CMI Results Acheived</label>
        <picklist>
            <controllingField>IPM_CMI_Input__c</controllingField>
            <picklistValues>
                <fullName>Failure (=&lt; 33%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky (34% - 69%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory (70% - 84%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding (&gt;= 85%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 30%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CRRT_Country__c</fullName>
        <description>used for crrt country</description>
        <label>IPM CRRT Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_CRRT_Status__c</fullName>
        <description>Contains Status of Consumer Unit</description>
        <label>IPM CRRT Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_CU_Sales_SKU_Count_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To look up the the volumes count for each unit</description>
        <label>IPM CU Sales SKU Count Mapping</label>
        <referenceTo>mdm_CU_Sales_SKU_Count_Mapping__c</referenceTo>
        <relationshipLabel>IPM Project Document Section Contents</relationshipLabel>
        <relationshipName>IPM_Project_Document_Section_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_CU_Volume__c</fullName>
        <description>Contains CRRT Consumer Unit Volume</description>
        <label>IPM CU Volume</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Comparison_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for comparison category</description>
        <label>Comparison Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Comparison_SKU_Greenhouse__c</fullName>
        <description>to store comparison SKU greenhouse</description>
        <label>Comparison SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Comparison_SKU_Sourcing__c</fullName>
        <description>to store comparison sku sourcing</description>
        <label>Comparison SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Comparison_SKU_Waste__c</fullName>
        <description>to store comparison sku waste</description>
        <label>Comparison SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Comparison_SKU_Water__c</fullName>
        <description>to store comparison SKU water</description>
        <label>Comparison SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Comparison_SKU__c</fullName>
        <description>to store comparison sku</description>
        <label>Comparison SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Evidence_Comments__c</fullName>
        <description>To Enter Conmsumer Evidence Comments</description>
        <label>IPM Consumer Evidence Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Evidence_Concept_Name__c</fullName>
        <description>Name of the Concept</description>
        <label>IPM Consumer Evidence Concept Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Evidence_Country__c</fullName>
        <description>Having Concept Country</description>
        <label>IPM Consumer Evidence Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Evidence_Gate__c</fullName>
        <description>contains consumer evidence gate</description>
        <label>IPM Consumer Evidence Gate</label>
        <picklist>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Evidence_Image__c</fullName>
        <description>contains consumer evidence image</description>
        <label>IPM Consumer Evidence Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Evidence_Logo_Id__c</fullName>
        <description>consumer evidence logo id</description>
        <label>IPM Consumer Evidence Logo Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Evidence_Priority__c</fullName>
        <description>contains consumer evidence priority</description>
        <label>IPM Consumer Evidence Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store the lookup to the consumer Unit</description>
        <label>IPM Consumer Unit</label>
        <referenceTo>mdm_Consumer_Unit__c</referenceTo>
        <relationshipLabel>IPM Project Document Section Contents</relationshipLabel>
        <relationshipName>IPM_Project_Document_Section_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Content_Type__c</fullName>
        <description>Used for storing content  type</description>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>CMI Gate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Evidence Concepts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assortment Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assumptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cu_Complexity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Action Standards</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Country__c</fullName>
        <description>contains country name</description>
        <label>Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Customer_Channel_Priority_Order__c</fullName>
        <description>customer channel priority order</description>
        <label>IPM Customer Channel Priority Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Customer_Channel_Priority__c</fullName>
        <description>contains customer channel priority</description>
        <label>IPM Customer Channel Priority</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Customer_Channels__c</fullName>
        <description>Provide various channel options</description>
        <label>IPM Customer Channels</label>
        <picklist>
            <picklistValues>
                <fullName>Hypermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Merchandiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarkets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small &amp; Open markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Decreased_By__c</fullName>
        <description>decreased by data for CUs</description>
        <label>IPM Decreased By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Directional_View_Greenhouse__c</fullName>
        <description>to store directional view greenhouse</description>
        <label>Directional View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Directional_View_Sourcing__c</fullName>
        <description>to store directional view sourcing</description>
        <label>Directional View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Directional_View_Waste__c</fullName>
        <description>to store directional view waste</description>
        <label>Directional View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Directional_View_Water__c</fullName>
        <description>to store directional view water</description>
        <label>Directional View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Distribution_Type__c</fullName>
        <description>contains distribution type in assortment strategy</description>
        <label>Distribution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Numeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weightage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>